--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -10,9 +10,10 @@ desc: |
    and input devices is now faster and more reliable (Bug #41752).
  * It is now possible to prevent that screenshots of specific users or groups
    are shown in the UMC module. See UCR variables
-   ucsschool/umc/computerroom/hide_screenshots/teachers and
-   ucsschool/umc/computerroom/hide_screenshots/groups (Bug #40210).
+   <envar>ucsschool/umc/computerroom/hide_screenshots/teachers</envar> and
+   <envar>ucsschool/umc/computerroom/hide_screenshots/groups</envar>
+   (Bug #40210).
  * Some typos in the description text of the UMC module
-   "UCS@school computerroom" have been corrected (Bug #42221).
- * Adjusted internal code for API changes in iTALC 3 (Bug #38213).
+   <guimenu>UCS@school computerroom</guimenu> have been corrected (Bug #42221).
+ * Adjusted internal code for API changes in iTALC 3.0 (Bug #38213).
 bug: [41752, 40210, 42221, 38213]
