Bug #40949: modified filename of quickstart guide
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74285 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/quickstart/Makefile
+++ b/doc/quickstart/Makefile
@@ -1,5 +1,5 @@
 #!/usr/bin/make -f
-MAIN := quickstart-ucsschool-de-4.1
+MAIN := quickstart-ucsschool-de-4.1R2
 STYLESHEET := univention_extdocs
 quickstart-de%: lang := de
 
