Bug #42399: use SchoolSanitizer
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74366 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -9,4 +9,5 @@ desc: |
    school exams (Bug #41568).
  * Don't log a error message if the exam user is not yet replicated
    (Bug #41562).
-bug: [41568, 41562]
+ * Proper error messages are shown when no school exists (Bug #42399).
+bug: [41568, 41562, 42399]
