--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -7,4 +7,6 @@ fix: 14.0.16-33.325.201611101809
 desc: |
  * The UsernameHandler.format_username() function has been improoved to not
    produce illegal usernames (e.g. ending with a dot) anymore (Bug #42478).
-bug: [42478]
+ * Added additional log output for simplier debugging of a specific exception
+   case during user import (Bug #42942).
+bug: [42478,42942]
