--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,9 +3,9 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-import
-fix: 14.0.16-35.327.201611141130
+fix: 14.0.16-36.328.201611141205
 desc: |
- * The UsernameHandler.format_username() function has been improoved to not
+ * The UsernameHandler.format_username() function has been improved to not
    produce illegal usernames (e.g. ending with a dot) anymore (Bug #42478).
  * Added additional log output for simplier debugging of a specific exception
    case during user import (Bug #42942).
