--- a/doc/errata/staging/ucs-school-umc-helpdesk.yaml
+++ b/doc/errata/staging/ucs-school-umc-helpdesk.yaml
@@ -2,8 +2,8 @@ product: ucsschool
 release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
-src: 
-fix: 
+src: ucs-school-umc-helpdesk
+fix: 12.0.3-1.57.201611111707
 desc: |
  * Proper error messages are shown when no school exists (Bug #42399).
 bug: [42399]
