--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -2,8 +2,8 @@ product: ucsschool
 release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
-src: 
-fix: 
+src: ucs-school-lib
+fix: 9.0.28-2.269.201611141436
 desc: |
  * Proper error messages are shown when no school exists (Bug #42399).
 bug: [42399]
