--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,9 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-lib
-fix: 9.0.28-2.269.201611141436
+fix: 9.0.29-1.270.201611141917
 desc: |
  * Proper error messages are shown when no school exists (Bug #42399).
-bug: [42399]
+ * The internal handling of group modifications has been optimized
+   (Bug #42495).
+bug: [42399, 42495]
