Bug #42503: make_email() now honors config[mandatory_attributes]
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74469 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -9,4 +9,8 @@ desc: |
    produce illegal usernames (e.g. ending with a dot) anymore (Bug #42478).
  * Added additional log output for simpler debugging of a specific exception
    case during user import (Bug #42942).
-bug: [42478,42942]
+ * The configration directive "mandatory_attributes" is now honored, when
+   checking if an email address was created. It is now only an error, if
+   "email" is listed in "mandatory_attributes" and no email address was
+   created (Bug #42503).
+bug: [42478,42503,42942]
