--- a/ucs-school-webproxy/debian/control
+++ b/ucs-school-webproxy/debian/control
@@ -11,6 +11,7 @@ Pre-Depends: univention-config
 Depends: univention-squid (>= 5.0.8),
  squidguard (>= 1.5-1.23),
  univention-config-registry,
+ python-ucs-school,
  ucs-school-umc-internetrules
 Description: meta package for UCS@school webproxy
  This meta package installs and configures squid and squidguard
