--- a/ucs-school-old-homedirs/debian/control
+++ b/ucs-school-old-homedirs/debian/control
@@ -7,8 +7,10 @@ Standards-Version: 3.8.2
 
 Package: ucs-school-old-homedirs
 Architecture: all
-Depends: univention-directory-listener
-Description: UCS@School listener module to move away obsolete home directories
+Depends: ${misc:Depends},
+ univention-directory-listener,
+ univention-config-registry
+Description: UCS@school listener module to move away obsolete home directories
  This package contains a univention directory listener module that
  moves away obsolete home directories on deletion of user accounts.
  .
