Bug #41989: remove home is user is removed from school (adapt to ou-overlapping users)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74640 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-old-homedirs/debian/control
+++ b/ucs-school-old-homedirs/debian/control
@@ -9,7 +9,8 @@ Package: ucs-school-old-homedirs
 Architecture: all
 Depends: ${misc:Depends},
  univention-directory-listener,
- univention-config-registry
+ univention-config-registry,
+ python-psutil
 Description: UCS@school listener module to move away obsolete home directories
  This package contains a univention directory listener module that
  moves away obsolete home directories on deletion of user accounts.
