--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -3,7 +3,10 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-computerroom
-fix: 8.0.9-1.202.201611111704
+fix: 8.0.10-1.203.201611222150
 desc: |
  * Proper error messages are shown when no school exists (Bug #42399).
-bug: [42399]
+ * If the computerroom module was already opened when starting a exam
+   and the settings were changed the exam was terminated and the exam
+   user accounts have not been removed (Bug #40901).
+bug: [42399, 40901]
