--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-exam
-fix: 6.0.8-2.120.201611221110
+fix: 6.0.9-1.121.201611222150
 desc: |
  * School users stored outside of any OU can now participate in
    school exams (Bug #41568).
@@ -12,4 +12,7 @@ desc: |
  * Proper error messages are shown when no school exists (Bug #42399).
  * Leftover home directories from users of previous exams are now removed
    (Bug #37955)
-bug: [41568, 41562, 42399, 37955]
+ * If the computerroom module was already opened when starting a exam
+   and the settings were changed the exam was terminated and the exam
+   user accounts have not been removed (Bug #40901).
+bug: [41568, 41562, 42399, 37955, 40901]
