--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,9 +3,11 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-lib
-fix: 9.0.29-1.270.201611141917
+fix: 9.0.29-3.272.201611231142
 desc: |
  * Proper error messages are shown when no school exists (Bug #42399).
  * The internal handling of group modifications has been optimized
    (Bug #42495).
-bug: [42399, 42495]
+ * Creation and modifications of shares which belong to classes or working
+   groups are now done with permissions of the school server (Bug #42065).
+bug: [42399, 42495, 42065]
