--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -6,9 +6,9 @@ src: ucs-school-umc-computerroom
 fix: 8.0.12-1.205.201611281749
 desc: |
  * Proper error messages are shown when no school exists (Bug #42399).
- * If the computerroom module was already opened when starting a exam
+ * If the computerroom module was already opened when starting an exam
    and the settings were changed the exam was terminated and the exam
-   user accounts have not been removed (Bug #40901).
+   user accounts were not removed (Bug #40901).
  * A segfault in the UMC module process has been fixed which occurred
    during a reconnection of a client (Bug #43044).
  * A segfault in the UMC module process has been fixed which occurred
