--- a/doc/errata/staging/ucs-school-italc.yaml
+++ b/doc/errata/staging/ucs-school-italc.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-italc
-fix: 
+fix: 10.0.0-3.58.201612051839
 desc: |
  * A segfault in the UMC module process has been fixed which occurred
    during a reconnection of a client (Bug #43044).
