--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -3,13 +3,13 @@ release: "4.1"
 version: [4]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-metapackage
-fix: 9.0.2-13.189.201612072218
+fix: 9.0.2-14.190.201612081412
 desc: |
  * The &ucsUAS; meta packages maintained its own values for the UCR variable <envar>connector/s4/mapping/group/ignorelist</envar>.
    These values were out of sync with the values of univention-s4-connector and have been resynced to avoid rejects (Bug #40418).
  * A (re)join is now aborted if the version of the UCS@school app on the
-   joining system is higher that version of the app on the DC master. UCRV
-   ucsschool/join/ignore-version-mismatch/.* allows to override the test.
-   Instruction on how to install differing app version can be found in the
-   SDB article at http://sdb.univention.de/1373 (Bug #41760).
+   joining system is higher than the version of the app on the DC master.
+   The UCRV ucsschool/join/ignore-version-mismatch/.* allows to override the
+   test. Instruction on how to install differing app version can be found
+   in the SDB article at http://sdb.univention.de/1373 (Bug #41760).
 bug: [40418,41760]
