Bug #41989: update advisory
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75124 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-old-homedirs.yaml
+++ b/doc/errata/staging/ucs-school-old-homedirs.yaml
@@ -3,10 +3,10 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-old-homedirs
-fix: 11.0.0-5.26.201612040940
+fix: 11.0.0-6.27.201612081454
 desc: |
-    * The listener module that backuped or removed home directories of
-      deleted users was adapted to ou-overlapping user accounts. It is now
-      also triggered if a user account not deleted, but the user was moved
-      to another school (Bug #41989).
+    * Code cleanup of the listener module. As the
+      univention-directory-listener is now aware of OU changes, the
+      listener module now also backupes or removes home directories of
+      users that are moved to another school (Bug #41989).
 bug: [41989]
