--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -3,14 +3,14 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-computerroom
-fix: 8.0.14-1.207.201612071756
+fix: 8.0.14-2.208.201612081342
 desc: |
  * Proper error messages are shown when no school exists (Bug #42399).
  * If the computerroom module was already opened when starting an exam
-   and the settings were changed the exam was terminated and the exam
-   user accounts were not removed (Bug #40901).
- * A segfault in the UMC module process has been fixed which occurred
+   and the settings were changed, the exam was terminated and the exam
+   user accounts and other restrictions were not removed (Bug #40901).
+ * A segfault in the UMC module <guimenu>Computerroom</guimenu> has been fixed which could occur
    during a reconnection of a client (Bug #43044).
- * A segfault in the UMC module process has been fixed which occurred
-   during creation of a screenshot (Bug #43051).
+ * A segfault in the UMC module <guimenu>Computerroom</guimenu> has been fixed which occurred
+   during creation of a screenshot after changing the Windows client's screen resolution (Bug #43051).
 bug: [42399, 40901, 43044, 43051]
