--- a/doc/errata/staging/italc.yaml
+++ b/doc/errata/staging/italc.yaml
@@ -5,9 +5,8 @@ scope: ucs_4.1-0-ucs-school-4.1r2
 src: italc
 fix: 2:2.0.25-16.99.201612051833
 desc: |
- * A segfault in the UMC module process has been fixed which occurred
+ * A segfault in the UMC module <guimenu>Computer room</guimenu> has been fixed which could occur
    during a reconnection of a client (Bug #43044).
- * A segfault in the UMC module process has been fixed which occurred
-   during creation of a screenshot and concurrent changing of the
-   screen resolution which happens for example during logon (Bug #43051).
+ * A segfault in the UMC module <guimenu>Computer room</guimenu> has been fixed which occurred
+   during creation of a screenshot after changing the Windows client's screen resolution (Bug #43051).
 bug: [43044, 43051]
