--- a/doc/errata/staging/ucs-school-italc.yaml
+++ b/doc/errata/staging/ucs-school-italc.yaml
@@ -5,8 +5,8 @@ scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-italc
 fix: 10.0.0-3.58.201612051839
 desc: |
- * A segfault in the UMC module process has been fixed which occurred
+ * A segfault in the UMC module <guimenu>Computer room</guimenu> has been fixed which could occur
    during a reconnection of a client (Bug #43044).
- * A segfault in the UMC module process has been fixed which occurred
-   during creation of a screenshot (Bug #43051).
+ * A segfault in the UMC module <guimenu>Computer room</guimenu> has been fixed which occurred
+   during creation of a screenshot after changing the Windows client's screen resolution (Bug #43051).
 bug: [43044, 43051]
