--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [4]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-import
-fix: 
+fix: 14.0.16-41.332.201612091542
 desc: |
  * The UsernameHandler.format_username() function has been improved to not
    produce illegal usernames (e.g. ending with a dot) anymore (Bug #42478).
