--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -7,9 +7,9 @@ fix: 9.0.2-17.193.201612091335
 desc: |
  * The &ucsUAS; meta packages maintained its own values for the UCR variable <envar>connector/s4/mapping/group/ignorelist</envar>.
    These values were out of sync with the values of univention-s4-connector and have been resynced to avoid rejects (Bug #40418).
- * A (re)join is now aborted if the version of the UCS@school app on the
+ * A (re)join is now aborted by a safety check if the version of the UCS@school app on the
    joining system is higher than the version of the app on the DC master.
-   The UCRV ucsschool/join/ignore-version-mismatch/.* allows to override the
-   test. Instruction on how to install differing app version can be found
-   in the SDB article at http://sdb.univention.de/1374 (Bug #41760).
+   UCR variables with the prefix <envar>ucsschool/join/ignore-version-mismatch/...</envar> allow to override the
+   safety check. Instruction on how to install differing app version can be found
+   in the SDB article at <uri>http://sdb.univention.de/1374</uri> (Bug #41760).
 bug: [40418,41760]
