--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -11,12 +11,13 @@ desc: |
    (Bug #41562).
  * Proper error messages are shown when no school exists (Bug #42399).
  * Each exam user now gets a unique home directory containing a time stamp
-   and is placed (in default configuration) in /home/$OU/schueler/exam-homes/$UID.$TIMESTAMP.
-   This prevents problems with orphaned home directories of previous exam runs.
+   and is placed (in default configuration) in <uri>/home/$OU/schueler/exam-homes/$UID.$TIMESTAMP</uri>.
+   This prevents access problems with orphaned home directories of previous exam runs.
    (Bug #37955).
- * If the computerroom module was already opened when starting an exam
-   and the settings were changed the exam was terminated and the exam
-   user accounts were not removed (Bug #40901).
+ * A problem with the exam status of a computer room has been fixed. If the UMC module <guimenu>Computer room</guimenu>
+   had been opened before starting a new exam and the exam room settings were changed via the
+   previously opened <guimenu>Computer room</guimenu>, the exam was terminated mistakenly and
+   the exam user accounts were not removed (Bug #40901).
  * When starting the exam mode, the user accounts of the selected groups
    are duplicated as new exam users. Mistakenly the LDAP attributes
    <property>ucsschoolRecordUID</property> and <property>ucsschoolSourceUID</property>
