--- a/doc/manual/Makefile
+++ b/doc/manual/Makefile
@@ -3,7 +3,7 @@ MAIN := ucsschool-handbuch-4.1 ucsschool-lehrer-handbuch-4.1
 STYLESHEET := ucsschool
 lang := de
 
-COMMON_DIR := ../../../doc-common/docbook
+COMMON_DIR ?= ../../../doc-common/docbook
 include $(COMMON_DIR)/Makefile
 
 OPTIONS += --stringparam front.cover "$(CURDIR)/page-background-title-page.jpg"
