--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-computerroom
-fix: 
+fix: 8.0.15-2.210.201702061453
 desc: |
  * It is now possible to create web links pointing directly to the computer
    room screenshots (Bug #42356).
