--- a/doc/errata/staging/ucs-school-webproxy.yaml
+++ b/doc/errata/staging/ucs-school-webproxy.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-webproxy
-fix: 
+fix: 12.0.4-3.125.201702061511
 desc: |
  * The file wpad.dat is now created as a link to proxy.pac (Bug #31728).
 bug: [31728]
