Bug #37256: YAML, copyright, spelling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76567 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-netlogon-user-logonscripts/debian/control
+++ b/ucs-school-netlogon-user-logonscripts/debian/control
@@ -14,7 +14,7 @@ Depends: univention-config-registry,
  ucs-school-netlogon,
  shell-univention-lib,
  univention-config
-Description: ucs@school userspecific netlogon scripts
+Description: UCS@school userspecific netlogon scripts
  This package provides a listener-module that creates
  specific netlogon scripts for each local user.
  .
