--- a/ucs-school-netlogon-user-logonscripts/debian/rules
+++ b/ucs-school-netlogon-user-logonscripts/debian/rules
@@ -1,8 +1,8 @@
 #!/usr/bin/make -f
 #
-# Univention UCS@School
+# Univention UCS@school
 #
-# Copyright 2007-2016 Univention GmbH
+# Copyright 2007-2017 Univention GmbH
 #
 # http://www.univention.de/
 #
