Bug #43504: strip whitespace from commonshare prefix
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@76573 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -10,4 +10,5 @@ desc: |
    ucsschool/userlogon/myshares/name defaults to "Eigene Dateien" and
    ucsschool/userlogon/mypictures/name defaults to "Eigene Bilder"
    (Bug #37256).
-bug: [37256]
+ * Whitespace is now stripped when splitting the UCR variable ucsschool/userlogon/commonshares (Bug #43504).
+bug: [37256, 43504]
