--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-lib
-fix: 
+fix: 9.0.31-1.275.201702151147
 desc: |
     * Add support for complete removal of a ou-overlapping user from a
       secondary school, including removal of all groups (Bug #41910).
