--- a/doc/errata/staging/ucs-school-umc-wizards.yaml
+++ b/doc/errata/staging/ucs-school-umc-wizards.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-wizards
-fix: 
+fix: 8.0.0-15.151.201702161609
 desc: |
  * Fix error when removing an OU-overlapping user account from a secondary
    OU (Bug #43170).
