--- a/doc/errata/staging/ucs-school-umc-helpdesk.yaml
+++ b/doc/errata/staging/ucs-school-umc-helpdesk.yaml
@@ -3,8 +3,8 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-helpdesk
-fix: 
+fix: 12.0.3-3.59.201702211031
 desc: |
- * The join script now fails completely if any of its parts fails
-   (Bug #38389)
+ * The category creation upon package installation does not fail anymore
+   (Bug #38389).
 bug: [38389]
