Bug #43526: refactor functions to class methods, remove global variables
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@77104 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -13,4 +13,6 @@ desc: |
  * Whitespace in the list of share names in the UCR variable
    ucsschool/userlogon/commonshares is now handled more securely (Bug
    #43504).
-bug: [37256, 43504]
+ * Certain elements of the user netlogon script can now be disabled (Bug
+   #43526).
+bug: [37256, 43504, 43526]
