Bug #41375: set icons of share/link folders
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@77127 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -10,9 +10,16 @@ desc: |
    ucsschool/userlogon/myshares/name defaults to "Eigene Dateien" and
    ucsschool/userlogon/mypictures/name defaults to "Eigene Bilder"
    (Bug #37256).
+ * The icons of the folders created by the netlogon script can now be set:
+   ucsschool/userlogon/shares_folder_icon,
+   ucsschool/userlogon/my_files_link_icon,
+   ucsschool/userlogon/other_links_icon.
+   The name of the "My Files" directory in the folders created by the
+   netlogon script, can now be set with the UCR variable
+   ucsschool/userlogon/my_files_link_name (Bug #41375).
  * Whitespace in the list of share names in the UCR variable
    ucsschool/userlogon/commonshares is now handled more securely (Bug
    #43504).
  * Certain elements of the user netlogon script can now be disabled (Bug
    #43526).
-bug: [37256, 43504, 43526]
+bug: [37256, 41375, 43504, 43526]
