Bug #43526: support switching off parts of logon script
* Bug #43526: support switching off parts of logon script, introducing
  UCRVs: ucsschool/userlogon/create_drive_mappings,
  ucsschool/userlogon/create_myfiles_link,
  ucsschool/userlogon/create_shortcuts,
  ucsschool/userlogon/create_teacher_umc_link,
  ucsschool/userlogon/disabled_share_links/*
* refactor more code from generate_windows_link_script into separate methods
* move all VBS code into one template, format and call appropriately
* s/listener.baseConfig/listener.configRegistry/g



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@77161 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -20,7 +20,11 @@ desc: |
  * Whitespace in the list of share names in the UCR variable
    ucsschool/userlogon/commonshares is now handled more securely (Bug
    #43504).
- * Certain elements of the user netlogon script can now be disabled. It
+ * Certain elements of the user netlogon script can now be disabled. See
+   UCR descriptions for ucsschool/userlogon/create_myfiles_link,
+   ucsschool/userlogon/create_shortcuts,
+   ucsschool/userlogon/create_teacher_umc_link and
+   ucsschool/userlogon/disabled_share_links/*.  It
    is now possible to configure the path in which the directory for the
    links will be created by setting the UCR variable
    ucsschool/userlogon/shares_folder_parent_path (Bug #43526).
