--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-netlogon-user-logonscripts
-fix: 
+fix: 12.0.4-10.65.201702281511
 desc: |
  * The names of the folder links on the users desktop can now be set via UCR:
    ucsschool/userlogon/shares_foldername defaults to "Eigene Shares",
