--- a/doc/errata/staging/0template.yaml
+++ b/doc/errata/staging/0template.yaml
@@ -1,7 +1,7 @@
 product: ucsschool
-release: "4.1"
-version: [3]
-scope: ucs_4.1-0-ucs-school-4.1r2
+release: "4.2"
+version: [1]
+scope: ucs_4.2-0-ucs-school-4.2
 src: 
 fix: 
 desc: |
