--- a/ucs-school-umc-csv-import/debian/control
+++ b/ucs-school-umc-csv-import/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  ucslint,
  python-support,
  univention-management-console-dev,
+ univention-config-dev,
  python-all
 Standards-Version: 3.5.2
 XS-Python-Version: 2.6, 2.7
