--- a/doc/errata/staging/ucs-school-umc-wizards.yaml
+++ b/doc/errata/staging/ucs-school-umc-wizards.yaml
@@ -1,6 +1,6 @@
 product: ucsschool
 release: "4.1"
-version: [3]
+version: [4]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-wizards
 fix: 8.0.0-15.151.201702161609
@@ -11,4 +11,4 @@ desc: |
  * Fix error when removing an OU-overlapping user account from a secondary
    OU (Bug #43170).
  * Adjust to behavioral change in UCS@school lib (Bug #41910).
-bug: [41910, 43170]
+bug: [42349, 41910, 43170]
